--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,24 @@
 body {
     margin: 5%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    background-color: #203342;
+    color: #fff;
+}
+
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+ul,
+li,
+input,
+button,
+select,
+span {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    font-family: 'Consolas', monospace;
 }
