--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
 }
 
 div,
+a,
 h1,
 h2,
 h3,
@@ -21,6 +22,12 @@ span {
     padding: 0;
     font-size: 1rem;
     font-family: 'Consolas', monospace;
+    text-decoration: none;
+    color: #fff;
+}
+
+a {
+    color: #8f8f8f;
 }
 
 button {
